[tool.poetry]
name = "site-visit"
version = "0.1.0"
description = "Manage files for CURENT ERC Annual Site Visit"
authors = ["Wen Zhang"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
comtypes = "^1.1"
qrcode = "^6.1"
PyPDF2 = "^1.26"
pymupdf = "^1.16"
Pillow = "^6.2"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
mypy = "^0.730.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
